--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li>Head First Java</li>
     <li>Pragmatic programmer</li>
     <li>Kotlin for beginners</li>
+    <li>JavaScript PHP MySQL</li>
   </ul>
   <h3>Web technologies</h3>
   <table>
