--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
 <head>
   <meta charset="utf-8">
   <title>Piter's Personal Site</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
   <table cellspacing="20">
     <tr>
       <td>
-        <a href="https://www.walcz.pl/"><img src="https://q-cf.bstatic.com/images/hotel/max1024x768/208/208995178.jpg" alt="" height="200" width="300"></a>
+        <a href="https://www.walcz.pl/"><img src="https://q-cf.bstatic.com/images/hotel/max1024x768/208/208995178.jpg" alt=""></a>
       </td>
       <td>
         <h1>Piter</h1>
@@ -18,7 +19,7 @@
         <p>I love coffee and programming</p>
       </td>
       <td>
-        <a href="https://www.walcz.pl/"><img src="img/most.jpg" alt="" height="200" width="300"></a>
+        <a href="https://www.walcz.pl/"><img src="img/most.jpg" alt=""></a>
       </td>
     </tr>
   </table>
